--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,7 +1,26 @@
 /* GLOBAL */
 @import "./common/variables.scss";
-@import "./common/global.scss";
+@import "./common/mixins.scss";
 @import "./common/fonts.scss";
+@import "./common/global.scss";
+@import "./common/visually-hidden.scss";
 
 /* BLOCKS */
-@import "./blocks/header.scss";
+@import "./blocks/page.scss";
+@import "./blocks/main-header.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/main-index.scss";
+@import "./blocks/hero.scss";
+@import "./blocks/button.scss";
+@import "./blocks/button-general.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/how-it-works.scss";
+@import "./blocks/live-example.scss";
+@import "./blocks/map.scss";
+@import "./blocks/main-footer.scss";
+@import "./blocks/products.scss";
+@import "./blocks/button-show-all.scss";
+@import "./blocks/additional-products.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/button-subscribe.scss";
+
