--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -23,4 +23,5 @@
 @import "./blocks/additional-products.scss";
 @import "./blocks/subscribe.scss";
 @import "./blocks/button-subscribe.scss";
+@import "./blocks/socials.scss";
 
