--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -11,6 +11,69 @@
   background-color: #f2f2f2;
 }
 
+.catalog__item-wrap {
+  display: flex;
+  align-items: center;
+}
+
+.catalog__item-picture {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  background-color: #68b738;
+  border-radius: 50%;
+
+  @media (min-width: $viewport-tablet) {
+    width: 200px;
+    height: 200px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+.catalog__item-picture::before {
+  position: absolute;
+  content: "";
+  background-repeat: no-repeat;
+}
+
+.catalog__item-picture--slim::before {
+  background-image: url("../../icons/stack.svg#catalog-cat-slim");
+  width: 50px;
+  height: 53px;
+
+  @media (min-width: $viewport-tablet) {
+    width: 140px;
+    height: 194px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    width: 70px;
+    height: 97px;
+  }
+}
+
+.catalog__item-picture--pro::before {
+  background-image: url("../../icons/stack.svg#catalog-cat-pro");
+  top: 10px;
+  left: -10px;
+  width: 67px;
+  height: 28px;
+
+  @media (min-width: $viewport-tablet) {
+    width: 268px;
+    height: 112px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    width: 134px;
+    height: 56px;
+  }
+}
+
 .catalog__item-title {
   text-transform: uppercase;
   font-size: 24px;
