--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -2,7 +2,7 @@
   background-color: #f2f2f2;
 }
 
-.main-footer__academy-logo-link {
+.main-footer__academy-logo-text-link {
   text-decoration: none;
 }
 
@@ -10,4 +10,16 @@
   font-size: 16px;
   line-height: 16px;
   color: #444444;
+}
+
+.main-footer__academy-logo-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main-footer__academy-logo-picture-link {
+  display: block;
+  background-image: url("../../icons/stack.svg#htmlacademy-logo");
+  width: 27px;
+  height: 34px;
 }
