Добавляет веторную графику везде

--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -98,7 +98,9 @@
 }
 
 .catalog__item-link {
-  display: block;
+  display: flex;
+  align-items: center;
+  gap: 25px;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 16px;
@@ -108,5 +110,24 @@
   @media (min-width: $viewport-tablet) {
     font-size: 20px;
     line-height: 30px;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  &::after {
+    content: "";
+    width: 24px;
+    height: 12px;
+    mask-image: url("../../icons/stack.svg#catalog-arrow-small");
+    mask-repeat: no-repeat;
+    background-color: #000000;
+  }
+
+  &:hover::after,
+  &:focus-visible::after {
+    width: 32px;
+    mask-image: url("../../icons/stack.svg#catalog-arrow-big");
   }
 }
