--- a/source/styles/blocks/additional-products.scss
+++ b/source/styles/blocks/additional-products.scss
@@ -43,6 +43,7 @@
 }
 
 .additional-products__order-all {
+  position: relative;
   width: 100%;
   height: 290px;
   background-color: rgba(104, 183, 56, 0.85);
@@ -50,8 +51,25 @@
   background-repeat: no-repeat;
   background-size: 100% auto;
 
+  &::before {
+    position: absolute;
+    left: 50%;
+    top: 59px;
+    transform: translateX(-50%);
+    width: 78px;
+    height: 80px;
+    content: "";
+    background-image: url("../../icons/stack.svg#products-gift");
+    background-size: 100%;
+  }
+
   @media (min-width: $viewport-tablet) {
     background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-tablet@1x.jpg") 1x, url("../../images/cat-case-tablet@2x.jpg") 2x);
+
+    &::before {
+      width: 80px;
+      height: 83px;
+    }
   }
 
   @media (min-width: $viewport-desktop) {
