--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -2,19 +2,32 @@
   font-family: $headers-font;
   color: #ffffff;
   text-transform: uppercase;
-  // background-color: #55dc62;
-  background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/hero-cat-mobile@1x.jpg") 1x, url("../../images/hero-cat-mobile@2x.jpg") 2x);
   background-repeat: no-repeat;
   background-size: 100% auto;
+
+  @media (max-width: 767px) and (min-resolution: 1dppx) {
+    background-image: url("../../images/hero-cat-mobile@1x.jpg");
+  }
+
+  @media (max-width: 767px) and (min-resolution: 2dppx) {
+    background-image: url("../../images/hero-cat-mobile@2x.jpg");
+  }
 
   @media (min-width: $viewport-tablet) {
     background-image: none;
   }
 
-  @media (min-width: $viewport-desktop) {
+  @media (min-width: $viewport-desktop) and (min-resolution: 1dppx) {
     background-color: #ffffff;
-    background-image: linear-gradient(90deg, #ffffff 50%, rgba(104, 183, 56, 0.85) 50%), image-set(url("../../images/hero-cat-desktop@1x.jpg") 1x, url("../../images/hero-cat-desktop@2x.jpg") 2x);
-    background-size: contain;
+    background-image: url("../../images/hero-cat-desktop@1x.jpg");
+    background-size: 50% auto;
+    background-position: right 0;
+  }
+
+  @media (min-width: $viewport-desktop) and (min-resolution: 2dppx) {
+    background-color: #ffffff;
+    background-image: url("../../images/hero-cat-desktop@2x.jpg");
+    background-size: 50% auto;
     background-position: right 0;
   }
 }
@@ -41,4 +54,8 @@
     line-height: 20px;
     color: #000000;
   }
+}
+
+.hero__image {
+  display: block;
 }
