--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -2,6 +2,10 @@
   background-color: inherit;
 }
 
+.map-image {
+  display: block;
+}
+
 .map__card-title {
   font-family: $headers-font;
   font-size: 16px;
