--- a/source/styles/blocks/nav.scss
+++ b/source/styles/blocks/nav.scss
@@ -1,20 +1,35 @@
 .nav__list {
   @include list-style-reset();
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .nav__link {
+  display: block;
   text-decoration: none;
   text-transform: uppercase;
   font-family: $headers-font;
   font-size: 20px;
   line-height: 20px;
   color: #000000;
+  padding: 22px 10px 24px;
 }
 
 .nav__toggle {
   border: none;
   padding: 0;
   background-color: transparent;
+  cursor: pointer;
+
+  &:hover,
+  &:focus-visible {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
 }
 
 .nav__toggle--close {
