--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -8,6 +8,7 @@
 /* BLOCKS */
 @import "./blocks/page.scss";
 @import "./blocks/main-header.scss";
+@import "./blocks/menu-burger.scss";
 @import "./blocks/nav.scss";
 @import "./blocks/main-index.scss";
 @import "./blocks/hero.scss";
