--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -8,13 +8,74 @@
 }
 
 .catalog__item {
+  position: relative;
   background-color: #f2f2f2;
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 50px;
+    height: 50px;
+    background-color: #68b738;
+    border-radius: 50%;
+
+    @media (min-width: $viewport-tablet) {
+      width: 200px;
+      height: 200px;
+    }
+
+    @media (min-width: $viewport-desktop) {
+      width: 100px;
+      height: 100px;
+    }
+  }
+
+  &::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    background-repeat: no-repeat;
+  }
+}
+
+.catalog__item--slim::after {
+  background-image: url("../../icons/stack.svg#catalog-cat-slim");
+  width: 36px;
+  height: 50px;
+
+  @media (min-width: $viewport-tablet) {
+    width: 140px;
+    height: 194px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    width: 70px;
+    height: 97px;
+  }
+}
+
+.catalog__item--pro::after {
+  background-image: url("../../icons/stack.svg#catalog-cat-pro");
+  width: 67px;
+  height: 28px;
+
+  @media (min-width: $viewport-tablet) {
+    width: 268px;
+    height: 112px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    width: 134px;
+    height: 56px;
+  }
 }
 
 .catalog__item-title {
   text-transform: uppercase;
   font-size: 24px;
   line-height: 37px;
+  margin-left: 90px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 36px;
@@ -35,15 +96,37 @@
 }
 
 .catalog__item-link {
-  display: block;
+  display: flex;
+  align-items: center;
+  gap: 25px;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 16px;
   text-decoration: none;
   color: #000000;
+  width: 170px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 20px;
     line-height: 30px;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  &::after {
+    content: "";
+    width: 24px;
+    height: 12px;
+    mask-image: url("../../icons/stack.svg#catalog-arrow-small");
+    mask-repeat: no-repeat;
+    background-color: #000000;
+  }
+
+  &:hover::after,
+  &:focus-visible::after {
+    width: 32px;
+    mask-image: url("../../icons/stack.svg#catalog-arrow-big");
   }
 }
