--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -2,8 +2,7 @@
   font-family: $headers-font;
   color: #ffffff;
   text-transform: uppercase;
-  // background-color: #55dc62;
-  background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/hero-cat-mobile@1x.jpg") 1x, url("../../images/hero-cat-mobile@2x.jpg") 2x);
+  background-image: image-set(url("../../images/hero-cat-mobile@1x.jpg") 1x, url("../../images/hero-cat-mobile@2x.jpg") 2x);
   background-repeat: no-repeat;
   background-size: 100% auto;
 
@@ -13,8 +12,8 @@
 
   @media (min-width: $viewport-desktop) {
     background-color: #ffffff;
-    background-image: linear-gradient(90deg, #ffffff 50%, rgba(104, 183, 56, 0.85) 50%), image-set(url("../../images/hero-cat-desktop@1x.jpg") 1x, url("../../images/hero-cat-desktop@2x.jpg") 2x);
-    background-size: contain;
+    background-image: image-set(url("../../images/hero-cat-desktop@1x.jpg") 1x, url("../../images/hero-cat-desktop@2x.jpg") 2x);
+    background-size: 50% auto;
     background-position: right 0;
   }
 }
@@ -41,4 +40,8 @@
     line-height: 20px;
     color: #000000;
   }
+}
+
+.hero__image {
+  display: block;
 }
