--- a/source/styles/blocks/how-it-works.scss
+++ b/source/styles/blocks/how-it-works.scss
@@ -13,13 +13,59 @@
 
 .how-it-works__list {
   @include list-style-reset();
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 
-  .how-it-works__text {
-    color: #444444;
+.how-it-works__text {
+  color: #444444;
+  margin-left: 80px;
+
+  @media (min-width: $viewport-tablet) {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
+.how-it-works__item {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background-color: #68b738;
 
     @media (min-width: $viewport-tablet) {
-      font-size: 16px;
-      line-height: 24px;
+      width: 80px;
+      height: 80px;
     }
   }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 16px;
+    left: 15px;
+    width: 25px;
+    height: 30px;
+  }
+}
+
+.how-it-works__item--leaf::after {
+  background-image: url("../../icons/stack.svg#how-it-works-leaf");
+}
+
+.how-it-works__item--powder::after {
+  background-image: url("../../icons/stack.svg#how-it-works-powder");
+}
+
+.how-it-works__item--eat::after {
+  background-image: url("../../icons/stack.svg#how-it-works-eat");
+}
+
+.how-it-works__item--clock::after {
+  background-image: url("../../icons/stack.svg#how-it-works-clock");
 }
