--- a/source/styles/blocks/live-example.scss
+++ b/source/styles/blocks/live-example.scss
@@ -44,6 +44,7 @@
 .live-example__facts-text {
   font-size: 24px;
   line-height: 24px;
+  text-transform: uppercase;
 
   @media (min-width: $viewport-tablet) {
     font-size: 30px;
