--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -2,6 +2,13 @@
   background-color: inherit;
 }
 
+.map-image {
+  display: block;
+  object-fit: contain;
+  width: 100%;
+  height: auto;
+}
+
 .map__card-title {
   font-family: $headers-font;
   font-size: 16px;
