Добавляет адаптивные сетки (#9)
* Добавляет адаптивные сетки для header и hero

* Добавляет адаптивные сетки для index.html

* Переделан логотип в header

* Перемещает header в блок hero

* Добавляет крупные адаптивные сетки

* Исправления под БЭМ

* Правки по векторной графике

* Небольшие поправки по размерам

* исправляет сетки

* исправляет недочеты по адаптивным сеткам

--- a/source/styles/blocks/button-burger.scss
+++ b/source/styles/blocks/button-burger.scss
@@ -1,4 +1,4 @@
-.menu-burger {
+.button-burger {
   border: none;
   padding: 0;
   background-color: transparent;
@@ -12,16 +12,20 @@
   &:active {
     opacity: 0.6;
   }
+
+  @media (min-width: $viewport-tablet) {
+    display: none;
+  }
 }
 
-.menu-burger--close {
+.button-burger--close {
   background-image: url("../../icons/stack.svg#burger-close");
   background-repeat: no-repeat;
   width: 18px;
   height: 18px;
 }
 
-.menu-burger--open {
+.button-burger--open {
   background-image: url("../../icons/stack.svg#burger-open");
   background-repeat: no-repeat;
   width: 24px;
