--- a/source/styles/blocks/additional-products.scss
+++ b/source/styles/blocks/additional-products.scss
@@ -7,6 +7,7 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
+  margin: 25px 0 49px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 32px;
@@ -16,6 +17,17 @@
 
 .additional-products__list {
   @include list-style-reset();
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  margin-bottom: 54px;
+}
+
+.additional-products__item {
+  @media (min-width: $viewport-tablet) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .additional-products__item-title {
@@ -23,10 +35,24 @@
   font-size: 16px;
   line-height: 16px;
   color: #222222;
+  text-transform: uppercase;
+  font-family: $headers-font;
+  margin-bottom: 13px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 20px;
     line-height: 20px;
+  }
+}
+
+.additional-products__info {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+
+  @media (min-width: $viewport-tablet) {
+    justify-content: end;
+    gap: 49px;
   }
 }
 
@@ -61,10 +87,16 @@
     content: "";
     background-image: url("../../icons/stack.svg#products-gift");
     background-size: 100%;
+
+    @media (min-width: $viewport-tablet) {
+      left: 78px;
+      top: 57px;
+    }
   }
 
   @media (min-width: $viewport-tablet) {
     background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), image-set(url("../../images/cat-case-tablet@1x.jpg") 1x, url("../../images/cat-case-tablet@2x.jpg") 2x);
+    height: 200px;
 
     &::before {
       width: 80px;
@@ -81,4 +113,12 @@
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
+  margin: 0;
+  padding: 187px 60px 43px;
+  text-align: center;
+
+  @media (min-width: $viewport-tablet) {
+    padding: 71px  125px 69px 421px;
+    text-align: left;
+  }
 }
