--- a/source/styles/blocks/button-general.scss
+++ b/source/styles/blocks/button-general.scss
@@ -4,8 +4,53 @@
 }
 
 .button-general--find-programm {
+  margin-top: 3px;
+  width: 280px;
+  padding: 10px 44px;
+  text-align: center;
+
   @media (min-width: $viewport-tablet) {
     font-size: 20px;
     line-height: 26px;
+    z-index: 1;
+    width: 244px;
+    padding: 14px 26px;
   }
+}
+
+.button-general--order {
+  grid-area: 3 / 1 / 4 / 4;
+  padding: 10px 109px;
+
+  @media (min-width: $viewport-tablet) {
+    padding: 10px 94px;
+    grid-column: 1 / -1;
+    padding-block: 10px;
+    text-align: center;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    padding: 10px 53px;
+  }
+}
+
+.button-general--show-all {
+  grid-area: 3 / 1 / 4 / 4;
+  padding: 10px 95px;
+  background-color: #f2f2f2;
+  color: #444444;
+}
+
+.button-general--subscribe {
+  border: none;
+  padding: 15px 81px;
+  font-size: 20px;
+  line-height: 26px;
+  height: 56px;
+  font-family: $headers-font;
+  font-weight: 400;
+  color: #ffffff;
+  background-color: #68b738;
+  text-transform: uppercase;
+  cursor: pointer;
 }
