--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -1,32 +1,54 @@
 .catalog {
+  position: relative;
   font-family: $headers-font;
   background-color: inherit;
 }
 
 .catalog__list {
   @include list-style-reset();
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  @media (min-width: $viewport-tablet) {
+    gap: 30px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    flex-direction: row;
+    gap: 80px;
+  }
 }
 
 .catalog__item {
   position: relative;
   background-color: #f2f2f2;
+  padding: 30px 20px 18px;
+  width: 280px;
+  box-sizing: border-box;
 
   &::before {
     position: absolute;
     content: "";
     width: 50px;
     height: 50px;
+    top: 24px;
+    left: 20px;
     background-color: #68b738;
     border-radius: 50%;
 
     @media (min-width: $viewport-tablet) {
       width: 200px;
       height: 200px;
+      top: 81px;
+      left: 445px;
     }
 
     @media (min-width: $viewport-desktop) {
       width: 100px;
       height: 100px;
+      top: 41px;
+      left: 52px;
     }
   }
 
@@ -37,21 +59,37 @@
     content: "";
     background-repeat: no-repeat;
   }
+
+  @media (min-width: $viewport-tablet) {
+    width: 708px;
+    padding: 77px 0 53px 52px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    width: 570px;
+    padding: 77px 0 55px 52px;
+  }
 }
 
 .catalog__item--slim::after {
   background-image: url("../../icons/stack.svg#catalog-cat-slim");
   width: 36px;
   height: 50px;
+  top: 21px;
+  left: 27px;
 
   @media (min-width: $viewport-tablet) {
     width: 140px;
     height: 194px;
+    top: 70px;
+    left: 475px;
   }
 
   @media (min-width: $viewport-desktop) {
     width: 70px;
     height: 97px;
+    top: 41px;
+    left: 67px;
   }
 }
 
@@ -59,15 +97,21 @@
   background-image: url("../../icons/stack.svg#catalog-cat-pro");
   width: 67px;
   height: 28px;
+  top: 35px;
+  left: 12px;
 
   @media (min-width: $viewport-tablet) {
     width: 268px;
     height: 112px;
+    top: 135px;
+    left: 420px;
   }
 
   @media (min-width: $viewport-desktop) {
     width: 134px;
     height: 56px;
+    top: 67px;
+    left: 33px;
   }
 }
 
@@ -75,23 +119,54 @@
   text-transform: uppercase;
   font-size: 24px;
   line-height: 37px;
-  margin-left: 90px;
+  margin: 0;
+  margin-bottom: 29px;
+  padding-left: 90px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 36px;
     line-height: 36px;
+    padding: 0;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    padding-left: 162px;
+    margin-bottom: 73px;
   }
 }
 
 .catalog__item-text {
+  position: relative;
   font-family: $general-font;
   line-height: 18px;
   color: #444444;
+  min-width: 227px;
+  margin: 0;
+  margin-bottom: 42px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 16px;
     line-height: 24px;
     color: #000000;
+    width: 340px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    width: 457px;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 113px;
+    display: block;
+    width: 240px;
+    height: 1px;
+    background-color: #d9d9d9;
+
+    @media (min-width: $viewport-tablet) {
+      display: none;
+    }
   }
 }
 
