--- a/source/styles/blocks/live-example.scss
+++ b/source/styles/blocks/live-example.scss
@@ -1,6 +1,25 @@
 .live-example {
-  background-color: #eaeaea;
+  position: relative;
   font-family: $headers-font;
+  padding: 25px 20px 40px;
+
+  &::before {
+    @media (min-width: $viewport-tablet) and (max-width: $viewport-desktop) {
+      position: absolute;
+      content: "";
+      top: -20px;
+      left: -30px;
+      display: block;
+      width: $viewport-tablet;
+      height: 1px;
+      background-color: #e6e6e6;
+    }
+  }
+
+  @media (min-width: $viewport-desktop) {
+    display: grid;
+    grid-template-columns: 660px 560px;
+  }
 }
 
 .live-example__title {
@@ -8,36 +27,108 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
+  margin-bottom: 40px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 60px;
     line-height: 60px;
+    margin-bottom: 60px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    margin-bottom: 146px;
   }
 }
 
 .live-example__text {
   font-family: $general-font;
   color: #444444;
+  width: 280px;
+  margin-bottom: 20px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 16px;
     line-height: 24px;
+    width: 708px;
+    margin-bottom: 55px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    margin-bottom: 69px;
+  }
+}
+
+.live-example__wrapper {
+  margin-bottom: 20px;
+
+  @media (min-width: $viewport-tablet) {
+    display: flex;
+    align-items: center;
+    gap: 167px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    flex-direction: column;
+    align-items: start;
+    gap: 60px;
   }
 }
 
 .live-example__facts-list {
   @include list-style-reset();
+  display: flex;
+  gap: 32px;
+  margin-bottom: 34px;
+}
+
+.live-example__facts-item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #cdcdcd;
+  border-radius: 3px;
+  width: 124px;
+  height: 56px;
+  box-sizing: border-box;
+
+  @media (min-width: $viewport-tablet) {
+    width: 162px;
+    height: 72px;
+  }
 }
 
 .live-example__facts-legend {
+  position: absolute;
+  top: 47px;
+  left: 18px;
   font-family: $general-font;
   font-size: 12px;
   line-height: 12px;
   color: #444444;
+  width: 80px;
+  text-align: center;
+  background-color: #eaeaea;
+  text-transform: lowercase;
 
   @media (min-width: $viewport-tablet) {
     font-size: 14px;
     line-height: 14px;
+    width: 114px;
+    top: 63px;
+    left: 24px;
+    background-color: #ffffff;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    background-color: #f2f2f2;
+  }
+}
+
+.live-example__facts-legend--long {
+  @media (min-width: $viewport-tablet) {
+    width: 142px;
+    left: 10px;
   }
 }
 
@@ -52,11 +143,69 @@
   }
 }
 
-.live-example__costs-wrap {
+.live-example__cost-wrap {
+  width: 188px;
+  margin: 0 auto;
+
+  @media (min-width: $viewport-desktop) {
+    margin: 0;
+    display: flex;
+    width: auto;
+    gap: 63px;
+  }
+}
+
+.live-example__cost-title,
+.live-example__cost-price {
   line-height: 20px;
+  text-transform: uppercase;
 
   @media (min-width: $viewport-tablet) {
     font-size: 20px;
     line-height: 20px;
+    display: block;
+    text-align: right;
   }
+
+  @media (min-width: $viewport-desktop) {
+    display: inline;
+  }
+}
+
+.live-example__slider {
+  position: relative;
+
+  @media (min-width: $viewport-desktop) {
+    grid-area: 1 / 2 / 4 / 3;
+  }
+}
+
+.live-example__slider-range {
+  position: absolute;
+  top: 10px;
+  left: 30px;
+}
+
+.live-example__slider-bar {
+  position: absolute;
+  width: 4px;
+  height: 256px;
+  border-radius: 2px;
+  background-color: #666666;
+}
+
+.live-example__toggle {
+  position: absolute;
+  top: 100px;
+  left: -18px;
+  border: none;
+  background-color: transparent;
+  background-image: url("../../icons/stack.svg#live-example-toggle");
+  background-repeat: no-repeat;
+  width: 40px;
+  height: 40px;
+}
+
+.live-example__slider-image-two {
+  display: none;
 }
