--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -1,19 +1,56 @@
 .map {
+  position: relative;
   background-color: inherit;
 }
 
-.map-image {
+.map__image {
   display: block;
   object-fit: contain;
   width: 100%;
   height: auto;
 }
 
+.map__card {
+  display: grid;
+  grid-template-columns: repeat(2, 140px);
+  padding: 26px 20px;
+  box-sizing: border-box;
+  width: 280px;
+  margin: 0 auto;
+
+  @media (min-width: $viewport-tablet) {
+    column-gap: 308px;
+    padding: 61px 70px;
+    width: 708px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    position: absolute;
+    background-color: #ffffff;
+    width: 565px;
+    top: 95px;
+    left: 110px;
+    padding: 60px 78px 60px 80px;
+    column-gap: 87px;
+  }
+}
+
+.map__card--catalog {
+  background-color: #f2f2f2;
+
+  @media (min-width: $viewport-desktop) {
+    background-color: #ffffff;
+  }
+}
+
 .map__card-title {
   font-family: $headers-font;
   font-size: 16px;
+  text-transform: uppercase;
   line-height: 20px;
   color: #111111;
+  margin: 0;
+  grid-row: 1 / 3;
 
   @media (min-width: $viewport-tablet) {
     font-size: 20px;
@@ -29,9 +66,17 @@
 
   @media (min-width: $viewport-tablet) {
     font-size: 16px;
+    text-align: right;
+    width: 157px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    text-align: left;
   }
 }
 
-.map__card--dark {
-  background-color: #f2f2f2;
+.map__card-town {
+  @media (min-width: $viewport-tablet) {
+    align-self: end;
+  }
 }
