--- a/source/styles/blocks/nav.scss
+++ b/source/styles/blocks/nav.scss
@@ -2,7 +2,16 @@
   @include list-style-reset();
   display: flex;
   flex-direction: column;
-  align-items: center;
+
+  @media (min-width: $viewport-tablet) {
+    flex-flow: wrap;
+    justify-content: end;
+    min-width: 430px;
+  }
+
+  @media (min-width: $viewport-tablet) {
+    min-width: 480px;
+  }
 }
 
 .nav__link {
@@ -14,4 +23,43 @@
   line-height: 20px;
   color: #000000;
   padding: 22px 10px 24px;
+
+  @media (min-width: $viewport-tablet) {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    font-size: 20px;
+    line-height: 30px;
+    color: #ffffff;
+  }
+}
+
+
+.nav__link--catalog {
+  @media (min-width: $viewport-desktop) {
+    color: #111111;
+  }
+}
+
+.nav__list-item {
+  width: 100%;
+  text-align: center;
+
+  @media (min-width: $viewport-tablet) {
+    width: auto;
+  }
+}
+
+.nav__list-item::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #e6e6e6;
+
+  @media (min-width: $viewport-tablet) {
+    display: none;
+  }
 }
