--- a/source/styles/blocks/socials.scss
+++ b/source/styles/blocks/socials.scss
@@ -3,39 +3,78 @@
   gap: 24px;
 
   @include list-style-reset();
+
+  &::before,
+  &::after {
+    position: absolute;
+    content: "";
+    left: -80px;
+    width: 280px;
+    height: 1px;
+    background-color: #d9d9d9;
+
+    @media (min-width: $viewport-tablet) {
+      display: none;
+    }
+  }
+
+  &::before {
+    top: -20px;
+  }
+
+  &::after {
+    top: 42px;
+  }
+}
+
+.socials__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .socials__link {
-  display: block;
-  width: 28px;
-  height: 22px;
-  background-position: center;
-  background-color: #666666;
+  &::before {
+    content: "";
+    display: block;
+    width: 28px;
+    height: 22px;
+    mask-position: center;
+    background-color: #666666;
+  }
 
-  &:hover {
+
+  &:hover::before,
+  &:focus-visible::before {
     background-color: #68b738;
   }
 
-  &:active {
+  &:active::before {
     background-color: rgba(104, 183, 56, 0.3);
   }
 }
 
 .socials__link--vk {
-  mask-image: url("../../icons/stack.svg#socials-vk");
-  width: 27px;
-  height: 17px;
+  &::before {
+    mask-image: url("../../icons/stack.svg#socials-vk");
+    width: 27px;
+    height: 17px;
+  }
 }
 
 .socials__link--youtube {
-  mask-image: url("../../icons/stack.svg#socials-youtube");
-  width: 24px;
-  height: 19px;
+  &::before {
+    mask-image: url("../../icons/stack.svg#socials-youtube");
+    width: 24px;
+    height: 19px;
+  }
 }
 
 .socials__link--telegram {
-  mask-image: url("../../icons/stack.svg#socials-telegram");
-  width: 20px;
-  height: 17px;
+  &::before {
+    mask-image: url("../../icons/stack.svg#socials-telegram");
+    width: 20px;
+    height: 17px;
+  }
 }
 
