Добавлена резина в index для mobile

--- a/source/styles/blocks/button-general.scss
+++ b/source/styles/blocks/button-general.scss
@@ -5,7 +5,7 @@
 
 .button-general--find-programm {
   margin-top: 3px;
-  width: 280px;
+  width: 88%;
   padding: 10px 44px;
   text-align: center;
 
