--- a/source/styles/blocks/container.scss
+++ b/source/styles/blocks/container.scss
@@ -1,11 +1,10 @@
 .container {
-  padding-inline: 20px;
-  margin: 0 auto;
-  width: 280px;
+  padding-inline: 6%;
+  width: 88%;
 
   @media (min-width: $viewport-tablet) {
-    width: 708px;
-    padding-inline: 30px;
+    width: 92%;
+    padding-inline: 4%;
   }
 
   @media (min-width: $viewport-desktop) {
