--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -40,7 +40,7 @@
       width: 200px;
       height: 200px;
       top: 81px;
-      left: 445px;
+      left: 63%;
     }
 
     @media (min-width: $viewport-desktop) {
@@ -81,7 +81,7 @@
     width: 140px;
     height: 194px;
     top: 70px;
-    left: 475px;
+    left: 67%;
   }
 
   @media (min-width: $viewport-desktop) {
@@ -120,7 +120,7 @@
   line-height: 37px;
   margin: 0;
   margin-bottom: 29px;
-  padding-left: 90px;
+  padding-left: 70px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 36px;
@@ -158,7 +158,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  gap: 25px;
+  gap: 15px;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 16px;
