--- a/source/styles/blocks/live-example.scss
+++ b/source/styles/blocks/live-example.scss
@@ -1,7 +1,10 @@
 .live-example {
   position: relative;
   font-family: $headers-font;
-  padding: 25px 20px 40px;
+  padding-top: 25px;
+  padding-bottom: 40px;
+  width: 100%;
+  box-sizing: border-box;
 
   &::before {
     @media (min-width: $viewport-tablet) and (max-width: $viewport-desktop) {
@@ -43,13 +46,12 @@
 .live-example__text {
   font-family: $general-font;
   color: #444444;
-  width: 280px;
+  width: 100%;
   margin-bottom: 20px;
 
   @media (min-width: $viewport-tablet) {
     font-size: 16px;
     line-height: 24px;
-    width: 708px;
     margin-bottom: 55px;
   }
 
@@ -65,6 +67,7 @@
     display: flex;
     align-items: center;
     gap: 167px;
+    justify-content: space-between;
   }
 
   @media (min-width: $viewport-desktop) {
@@ -79,6 +82,10 @@
   display: flex;
   gap: 32px;
   margin-bottom: 34px;
+
+  @media (min-width: $viewport-tablet) {
+    margin-bottom: 0;
+  }
 }
 
 .live-example__facts-item {
@@ -147,6 +154,10 @@
   width: 188px;
   margin: 0 auto;
 
+  @media (min-width: $viewport-tablet) {
+    margin: 0;
+  }
+
   @media (min-width: $viewport-desktop) {
     margin: 0;
     display: flex;
@@ -174,6 +185,12 @@
 
 .live-example__slider {
   position: relative;
+  width: 280px;
+  margin: 0 auto;
+
+  @media (min-width: $viewport-tablet) {
+    width: 560px;
+  }
 
   @media (min-width: $viewport-desktop) {
     grid-area: 1 / 2 / 4 / 3;
