--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -4,7 +4,9 @@
   align-items: center;
   gap: 40px;
   background-color: #f2f2f2;
-  padding: 40px 20px;
+  padding-block: 40px;
+  width: 100%;
+  box-sizing: border-box;
 
   @media (min-width: $viewport-tablet) {
     flex-direction: row;
@@ -21,6 +23,31 @@
 .main-footer__socials {
   position: relative;
   padding-bottom: 20px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &::before,
+  &::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: #d9d9d9;
+
+    @media (min-width: $viewport-tablet) {
+      display: none;
+    }
+  }
+
+  &::before {
+    top: -20px;
+  }
+
+  &::after {
+    top: 42px;
+  }
 }
 
 .main-footer__logo-link-svg {
