--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -28,6 +28,8 @@
 }
 
 .main-header__header-wrap {
+  width: 100%;
+
   @media (min-width: $viewport-tablet) {
     display: flex;
     align-items: center;
