--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -1,6 +1,20 @@
 .map {
   position: relative;
   background-color: inherit;
+  background-image: image-set(url("../../images/map-mobile@1x.png") 1x, url("../../images/map-mobile@2x.png") 2x);
+  background-repeat: no-repeat;
+  background-position: center 112px;
+  background-size: contain;
+
+  @media (min-width: $viewport-tablet) {
+    background-image: image-set(url("../../images/map-tablet@1x.png") 1x, url("../../images/map-tablet@2x.png") 2x);
+    background-position-y: 200px;
+  }
+
+  @media (min-width: $viewport-desktop) {
+    background-image: image-set(url("../../images/map-desktop@1x.png") 1x, url("../../images/map-desktop@2x.png") 2x);
+    background-position-y: 0;
+  }
 }
 
 .map__image {
@@ -8,6 +22,14 @@
   object-fit: contain;
   width: 100%;
   height: auto;
+}
+
+.map__remote-map {
+  display: block;
+
+  @media (min-width: $viewport-tablet) {
+    height: 400px;
+  }
 }
 
 .map__card {
